--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,35 @@
 
-cmake_minimum_required ( VERSION 2.8 )
 
-# common staticlibs setup
-if ( NOT DEFINED STATICLIB_PARENT_DIR )
-    set ( STATICLIB_TOOLCHAIN amd64_linux_clang CACHE STRING "toolchain triplet" )
-    set ( STATICLIB_PARENT_DIR ${CMAKE_CURRENT_LIST_DIR}/../ CACHE INTERNAL "parent dir" )
-    include ( ${STATICLIB_PARENT_DIR}/staticlib_util_cmake/CMakeLists_common.cmake )
-    staticlib_set_toolchain ( ${STATICLIB_PARENT_DIR} ${STATICLIB_TOOLCHAIN} )
-endif ( )
+cmake_minimum_required ( VERSION 2.8.12 )
 
-# project header
-project ( staticlib_ext_openssl C CXX )
-set ( ${PROJECT_NAME}_VERSION_MAJOR 1 )
-set ( ${PROJECT_NAME}_VERSION_MINOR 0 )
-set ( ${PROJECT_NAME}_VERSION_MICRO 2 )
+# toolchain setup
+set ( STATICLIB_TOOLCHAIN linux_amd64_clang CACHE STRING "toolchain triplet" )
+set ( CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_LIST_DIR}/cmake/toolchains/${STATICLIB_TOOLCHAIN}.cmake CACHE INTERNAL "" )
+
+# project setup
+project ( external_openssl CXX C )
+# common include
+include ( ${CMAKE_CURRENT_LIST_DIR}/cmake/CMakeLists_common.cmake )
 
 # library config
 configure_file ( ${CMAKE_CURRENT_LIST_DIR}/Makefile-${STATICLIB_TOOLCHAIN}
         ${CMAKE_CURRENT_BINARY_DIR}/Makefile-${STATICLIB_TOOLCHAIN})
 add_custom_target( ${PROJECT_NAME}_build
         COMMAND ${CMAKE_MAKE_PROGRAM} -f ${CMAKE_CURRENT_BINARY_DIR}/Makefile-${STATICLIB_TOOLCHAIN})
-add_library( ${PROJECT_NAME} STATIC IMPORTED GLOBAL )
-set_target_properties( ${PROJECT_NAME} PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/libssl${CMAKE_STATIC_LIBRARY_SUFFIX} )
-set_target_properties( ${PROJECT_NAME} PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/libcrypto${CMAKE_STATIC_LIBRARY_SUFFIX} )
-add_dependencies( ${PROJECT_NAME} ${PROJECT_NAME}_build )
+add_library( ssl STATIC IMPORTED GLOBAL )
+set_target_properties( ssl PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/openssl/libssl${CMAKE_STATIC_LIBRARY_SUFFIX} )
+add_library( crypto STATIC IMPORTED GLOBAL )
+set_target_properties( crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/openssl/libcrypto${CMAKE_STATIC_LIBRARY_SUFFIX} )
+set ( ${PROJECT_NAME}_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/openssl/include )
 
 # tests
-#include_directories ( ${CMAKE_CURRENT_BINARY_DIR}/libxml2/include )
-set ( ${PROJECT_NAME}_TEST_LIBS ${PROJECT_NAME} )
-staticlib_enable_testing ( ${PROJECT_NAME}_TEST_LIBS )
+enable_testing ( )
+set ( ${PROJECT_NAME}_TEST_INCLUDES ${${PROJECT_NAME}_INCLUDES} )
+add_executable ( openssl_test ${CMAKE_CURRENT_LIST_DIR}/test/openssl_test.cpp )
+target_include_directories ( openssl_test BEFORE PRIVATE ${${PROJECT_NAME}_INCLUDES} )
+target_link_libraries ( openssl_test ssl crypto )
+add_dependencies( openssl_test ${PROJECT_NAME}_build )
+add_test ( openssl_test ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/openssl_test )
 
 # headers export
-#set ( ${PROJECT_NAME}_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/libxml2/include CACHE INTERNAL ${PROJECT_NAME}_INCLUDES )
+set ( ${PROJECT_NAME}_INCLUDES ${${PROJECT_NAME}_INCLUDES} CACHE INTERNAL "" )
