--- a/Makefile-linux_amd64_clang
+++ b/Makefile-linux_amd64_clang
@@ -4,10 +4,8 @@ export CFLAGS := -fPIC
 all:
 ifeq ($(wildcard ${CMAKE_CURRENT_BINARY_DIR}/openssl),)	
 	cp -a ${CMAKE_CURRENT_LIST_DIR}/openssl ${CMAKE_CURRENT_BINARY_DIR}/openssl
-	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(SH) ./Configure linux-x86_64
+	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(SH) ./Configure linux-x86_64-clang
 	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(MAKE)
-	cp ${CMAKE_CURRENT_BINARY_DIR}/openssl/libssl.a ${CMAKE_CURRENT_BINARY_DIR}
-	cp ${CMAKE_CURRENT_BINARY_DIR}/openssl/libcrypto.a ${CMAKE_CURRENT_BINARY_DIR}
 else
 	@echo "[${CMAKE_CURRENT_BINARY_DIR}/openssl] directory found, skipping build"
 endif		
