--- a/Makefile-windows_i386_msvc
+++ b/Makefile-windows_i386_msvc
@@ -4,7 +4,7 @@ all:
 	@if exist "${CMAKE_CURRENT_BINARY_DIR}/openssl" echo "flag" > "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag"
 	@if exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" echo "[${CMAKE_CURRENT_BINARY_DIR}/openssl] directory found, skipping build"
 	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" xcopy /s /i /q "${CMAKE_CURRENT_LIST_DIR}/openssl" "${CMAKE_CURRENT_BINARY_DIR}/openssl"
-	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" echo f | xcopy /f /y "${CMAKE_CURRENT_BINARY_DIR}/openssl/configure.ac" "${CMAKE_CURRENT_BINARY_DIR}/openssl/configure.in"
-	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" pushd "${CMAKE_CURRENT_BINARY_DIR}/openssl/win32" & cscript configure.js compiler=msvc debug=${${PROJECT_NAME}_DEBUG} cruntime=${${PROJECT_NAME}_MSVC_RUNTIME} ftp=no http=no iconv=no modules=no & popd
-	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" pushd "${CMAKE_CURRENT_BINARY_DIR}/openssl/win32" & nmake /nologo & popd
-	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" echo f | xcopy /f /y "${CMAKE_CURRENT_BINARY_DIR}/openssl/win32/bin.msvc/openssl_a.lib" "${CMAKE_CURRENT_BINARY_DIR}/openssl.lib"
+# http://rt.openssl.org/Ticket/Display.html?id=3650&user=guest&pass=guest
+	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" pushd "${CMAKE_CURRENT_BINARY_DIR}/openssl" & perl Configure VC-WIN32 no-asm & popd
+	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" pushd "${CMAKE_CURRENT_BINARY_DIR}/openssl" & ms\do_ms & popd
+	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" pushd "${CMAKE_CURRENT_BINARY_DIR}/openssl" & nmake /nologo -f ms\nt.mak & popd
