--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ if ( STATICLIB_TOOLCHAIN MATCHES "windows_(amd64|i386)_msvc" )
     set_target_properties( ssl PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/openssl/out32/ssleay32${CMAKE_STATIC_LIBRARY_SUFFIX} )
     set_target_properties( crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/openssl/out32/libeay32${CMAKE_STATIC_LIBRARY_SUFFIX} )
     set ( ${PROJECT_NAME}_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/openssl/inc32 )
-elseif ( )
+else ( )
     set_target_properties( ssl PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/openssl/libssl${CMAKE_STATIC_LIBRARY_SUFFIX} )
     set_target_properties( crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/openssl/libcrypto${CMAKE_STATIC_LIBRARY_SUFFIX} )
     set ( ${PROJECT_NAME}_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/openssl/include )
