target libs fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,16 +21,9 @@ add_library( ${PROJECT_NAME}_crypto STATIC IMPORTED GLOBAL )
 add_dependencies( ${PROJECT_NAME}_crypto ${PROJECT_NAME}_build )
 add_library( ${PROJECT_NAME}_ssl STATIC IMPORTED GLOBAL )
 add_dependencies( ${PROJECT_NAME}_ssl ${PROJECT_NAME}_build )
-
-if ( STATICLIB_TOOLCHAIN MATCHES "windows_(amd64|i386)_msvc" )
-    set_target_properties( ${PROJECT_NAME}_ssl PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/openssl/out32/libeay32${CMAKE_STATIC_LIBRARY_SUFFIX} )
-    set_target_properties( ${PROJECT_NAME}_crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/openssl/out32/ssleay32${CMAKE_STATIC_LIBRARY_SUFFIX} )
-    set ( ${PROJECT_NAME}_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/openssl/inc32 )
-else ( )
-    set_target_properties( ${PROJECT_NAME}_ssl PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/openssl/libcrypto${CMAKE_STATIC_LIBRARY_SUFFIX} )
-    set_target_properties( ${PROJECT_NAME}_crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/openssl/libssl${CMAKE_STATIC_LIBRARY_SUFFIX} )
-    set ( ${PROJECT_NAME}_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/openssl/include )
-endif ( )
+set_target_properties( ${PROJECT_NAME}_ssl PROPERTIES IMPORTED_LOCATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto${CMAKE_STATIC_LIBRARY_SUFFIX} )
+set_target_properties( ${PROJECT_NAME}_crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl${CMAKE_STATIC_LIBRARY_SUFFIX} )
+set ( ${PROJECT_NAME}_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/openssl/include )
 
 # tests
 enable_testing ( )
