--- a/Makefile-android_armeabi_gcc
+++ b/Makefile-android_armeabi_gcc
@@ -14,6 +14,8 @@ ifeq ($(wildcard ${CMAKE_CURRENT_BINARY_DIR}/openssl),)
 	cp -a ${CMAKE_CURRENT_LIST_DIR}/openssl ${CMAKE_CURRENT_BINARY_DIR}/openssl
 	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(SH) ./Configure android
 	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(MAKE)
+	cp ${CMAKE_CURRENT_BINARY_DIR}/openssl/libcrypto.a ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto.a )
+	cp ${CMAKE_CURRENT_BINARY_DIR}/openssl/libssl.a ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl.a )	
 else
 	@echo "[${CMAKE_CURRENT_BINARY_DIR}/openssl] directory found, skipping build"
 endif		
