--- a/Makefile-windows_i386_msvc
+++ b/Makefile-windows_i386_msvc
@@ -4,7 +4,10 @@ all:
 	@if exist "${CMAKE_CURRENT_BINARY_DIR}/openssl" echo "flag" > "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag"
 	@if exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" echo "[${CMAKE_CURRENT_BINARY_DIR}/openssl] directory found, skipping build"
 	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" xcopy /s /i /q "${CMAKE_CURRENT_LIST_DIR}/openssl" "${CMAKE_CURRENT_BINARY_DIR}/openssl"
-# http://rt.openssl.org/Ticket/Display.html?id=3650&user=guest&pass=guest
+	# http://rt.openssl.org/Ticket/Display.html?id=3650&user=guest&pass=guest
 	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" pushd "${CMAKE_CURRENT_BINARY_DIR}/openssl" & perl Configure VC-WIN32 no-asm & popd
 	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" pushd "${CMAKE_CURRENT_BINARY_DIR}/openssl" & ms\do_ms & popd
 	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" pushd "${CMAKE_CURRENT_BINARY_DIR}/openssl" & nmake /nologo -f ms\nt.mak & popd
+	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" echo f | xcopy /f /y "${CMAKE_CURRENT_BINARY_DIR}/openssl/out32/libeay32.lib" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto.lib"
+	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" echo f | xcopy /f /y "${CMAKE_CURRENT_BINARY_DIR}/openssl/out32/ssleay32.lib" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl.lib"
+	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" xcopy /s /i /q "${CMAKE_CURRENT_BINARY_DIR}/openssl/inc32" "${CMAKE_CURRENT_BINARY_DIR}/openssl/include"
