--- a/Makefile-android_armeabi_gcc
+++ b/Makefile-android_armeabi_gcc
@@ -12,8 +12,12 @@ export STRIP := ${CMAKE_STRIP}
 all:
 ifeq ($(wildcard ${CMAKE_CURRENT_BINARY_DIR}/openssl),)	
 	cp -a ${CMAKE_CURRENT_LIST_DIR}/openssl ${CMAKE_CURRENT_BINARY_DIR}/openssl
-	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(SH) ./Configure android
+	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(SH) ./Configure \
+		android \
+		shared \
+		--openssldir=${CMAKE_CURRENT_BINARY_DIR}/openssl_install	
 	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(MAKE)
+	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(MAKE) install
 	mkdir -p ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
 	cp ${CMAKE_CURRENT_BINARY_DIR}/openssl/libcrypto.a ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto.a
 	cp ${CMAKE_CURRENT_BINARY_DIR}/openssl/libssl.a ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl.a
