--- a/Makefile-linux_amd64_gcc
+++ b/Makefile-linux_amd64_gcc
@@ -9,6 +9,7 @@ ifeq ($(wildcard ${CMAKE_CURRENT_BINARY_DIR}/openssl),)
 		shared \
 		--openssldir=${CMAKE_CURRENT_BINARY_DIR}/openssl_install
 	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(MAKE)
+	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(MAKE) install
 	mkdir -p ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
 	cp ${CMAKE_CURRENT_BINARY_DIR}/openssl/libcrypto.a ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto.a
 	cp ${CMAKE_CURRENT_BINARY_DIR}/openssl/libssl.a ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl.a
