--- a/Makefile-linux_amd64_clang
+++ b/Makefile-linux_amd64_clang
@@ -3,8 +3,8 @@ all:
 ifeq ($(wildcard ${CMAKE_CURRENT_BINARY_DIR}/openssl),)	
 	cp -a ${CMAKE_CURRENT_LIST_DIR}/openssl ${CMAKE_CURRENT_BINARY_DIR}/openssl
 # http://wiki.openssl.org/index.php/Compilation_and_Installation#Modifying_Build_Settings	
-	LC_ALL=C sed -i~ 's/^"linux-x86_64-clang",	"clang: -m64 -DL_ENDIAN -DTERMIO -O3/"linux-x86_64-clang",	"clang: -m64 -DL_ENDIAN -DTERMIO ${${PROJECT_NAME}_CFLAGS}/' ${CMAKE_CURRENT_BINARY_DIR}/openssl/Configure
-	LC_ALL=C sed -i~ 's/^install: all install_docs install_sw/install: all install_sw/' ${CMAKE_CURRENT_BINARY_DIR}/openssl/Makefile.org
+	perl -i -p -e 's#^"linux-x86_64-clang",\s*"clang: -m64 -DL_ENDIAN -DTERMIO -O3#"linux-x86_64-clang", "clang: -m64 -DL_ENDIAN -DTERMIO ${${PROJECT_NAME}_CFLAGS}#g' ${CMAKE_CURRENT_BINARY_DIR}/openssl/Configure
+	perl -i -p -e 's#^install: all install_docs install_sw#install: all install_sw#g' ${CMAKE_CURRENT_BINARY_DIR}/openssl/Makefile.org
 	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(SH) ./Configure \
 		linux-x86_64-clang \
 		shared \
