--- a/Makefile-macosx_amd64_clang
+++ b/Makefile-macosx_amd64_clang
@@ -8,7 +8,7 @@ ifeq ($(wildcard ${CMAKE_CURRENT_BINARY_DIR}/openssl),)
 	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(SH) ./Configure \
 		darwin64-x86_64-cc \
 		no-asm \
-		shared \
+		${${PROJECT_NAME}_SHARED} \
 		--openssldir=${CMAKE_CURRENT_BINARY_DIR}/openssl_install
 	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(MAKE)
 	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(MAKE) install
