--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,27 +14,23 @@
 
 cmake_minimum_required ( VERSION 2.8.12 )
 
-# toolchain setup
-set ( STATICLIB_TOOLCHAIN linux_amd64_gcc CACHE STRING "toolchain triplet" )
-set ( CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_LIST_DIR}/cmake/toolchains/${STATICLIB_TOOLCHAIN}.cmake CACHE INTERNAL "" )
+# project
+project ( external_openssl CXX )
+set ( ${PROJECT_NAME}_STATICLIB_VERSION 1.0.2.3 )
+set ( ${PROJECT_NAME}_DESCRIPTION "OpenSSL library build for Staticlibs" )
+set ( ${PROJECT_NAME}_URL https://github.com/staticlibs/external_openssl.git )
 
-# project setup
-project ( external_openssl CXX C )
-set ( ${PROJECT_NAME}_STATICLIB_VERSION 1.0.2.2 )
-# common include
-include ( ${CMAKE_CURRENT_LIST_DIR}/cmake/staticlibs_common.cmake )
+
 # options, use SET ( OPTNAME ON CACHE BOOL "") to override
 option ( STATICLIB_OPENSSL_SHARED "Use 'shared' or 'no-shared' OpenSSL flag" OFF )
 
-# compile definitions
+# variables for makefiles
 set ( ${PROJECT_NAME}_CFLAGS ${CMAKE_C_FLAGS} )
-if ( STATICLIB_TOOLCHAIN MATCHES "[^_]+_[^_]+_clang" )
+if ( ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang" )
     set ( ${PROJECT_NAME}_CFLAGS "${${PROJECT_NAME}_CFLAGS} -Wno-empty-translation-unit -Wno-gnu-statement-expression -Wno-shadow" )
-elseif ( STATICLIB_TOOLCHAIN MATCHES "[^_]+_[^_]+_gcc" )
+elseif ( ${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU" )
     set ( ${PROJECT_NAME}_CFLAGS "${${PROJECT_NAME}_CFLAGS} -Wno-maybe-uninitialized" )
 endif ( )
-
-# variables for makefiles
 if ( CMAKE_BUILD_TYPE MATCHES "Debug" )
     set ( ${PROJECT_NAME}_CFLAGS "${${PROJECT_NAME}_CFLAGS} ${CMAKE_C_FLAGS_DEBUG}" )
 endif ( )
@@ -46,25 +42,29 @@ if ( STATICLIB_OPENSSL_SHARED )
 else ( )
     set ( ${PROJECT_NAME}_SHARED "no-dso" )
 endif ( )
-# library config
-configure_file ( ${CMAKE_CURRENT_LIST_DIR}/Makefile-${STATICLIB_TOOLCHAIN}
-        ${CMAKE_CURRENT_BINARY_DIR}/Makefile-${STATICLIB_TOOLCHAIN})
-add_custom_target( ${PROJECT_NAME}_build
-        COMMAND ${CMAKE_MAKE_PROGRAM} -f ${CMAKE_CURRENT_BINARY_DIR}/Makefile-${STATICLIB_TOOLCHAIN})
 
-add_library( ${PROJECT_NAME} STATIC IMPORTED GLOBAL )
-add_dependencies( ${PROJECT_NAME} ${PROJECT_NAME}_build )
-add_library( ${PROJECT_NAME}_ssl STATIC IMPORTED GLOBAL )
-add_dependencies( ${PROJECT_NAME}_ssl ${PROJECT_NAME}_build )
-set_target_properties( ${PROJECT_NAME}_ssl PROPERTIES IMPORTED_LOCATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto${CMAKE_STATIC_LIBRARY_SUFFIX} )
-set_target_properties( ${PROJECT_NAME} PROPERTIES IMPORTED_LOCATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl${CMAKE_STATIC_LIBRARY_SUFFIX} )
-set ( ${PROJECT_NAME}_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/openssl/include )
+# library
+if ( DEFINED STATICLIB_TOOLCHAIN )
+    configure_file ( ${CMAKE_CURRENT_LIST_DIR}/resources/Makefile-${STATICLIB_TOOLCHAIN}
+            ${CMAKE_CURRENT_BINARY_DIR}/Makefile-${STATICLIB_TOOLCHAIN})
+    add_custom_target( ${PROJECT_NAME}_build
+            COMMAND ${CMAKE_MAKE_PROGRAM} -f ${CMAKE_CURRENT_BINARY_DIR}/Makefile-${STATICLIB_TOOLCHAIN})
+    add_library( crypto STATIC IMPORTED GLOBAL )
+    add_dependencies( crypto ${PROJECT_NAME}_build )
+    set_target_properties( crypto PROPERTIES IMPORTED_LOCATION
+            ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto${CMAKE_STATIC_LIBRARY_SUFFIX} )
+    add_library( ssl STATIC IMPORTED GLOBAL )
+    add_dependencies( ssl ${PROJECT_NAME}_build )
+    set_target_properties( ssl PROPERTIES IMPORTED_LOCATION
+            ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl${CMAKE_STATIC_LIBRARY_SUFFIX} )
+endif ( )
 
-# tests
-set ( ${PROJECT_NAME}_TEST_INCLUDES ${${PROJECT_NAME}_INCLUDES} )
-set ( ${PROJECT_NAME}_TEST_LIBS ${PROJECT_NAME} ${PROJECT_NAME}_ssl )
-set ( ${PROJECT_NAME}_TEST_OPTS "" )
-staticlib_enable_testing ( ${PROJECT_NAME}_TEST_INCLUDES ${PROJECT_NAME}_TEST_LIBS ${PROJECT_NAME}_TEST_OPTS )
-
-# headers export
-set ( ${PROJECT_NAME}_INCLUDES ${${PROJECT_NAME}_INCLUDES} CACHE INTERNAL "" )
+# pkg-config
+if ( NOT DEFINED CMAKE_LIBRARY_OUTPUT_DIRECTORY )
+    set ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} )
+endif ( )
+set ( ${PROJECT_NAME}_MODULE openssl )
+set ( ${PROJECT_NAME}_PC_CFLAGS "-I${CMAKE_CURRENT_BINARY_DIR}/openssl/include" )
+set ( ${PROJECT_NAME}_PC_LIBS "-L${CMAKE_LIBRARY_OUTPUT_DIRECTORY} -lssl -lcrypto" )
+configure_file ( ${CMAKE_CURRENT_LIST_DIR}/resources/pkg-config.in 
+        ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/pkgconfig/openssl.pc )
