--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,20 +43,21 @@ else ( )
 endif ( )
 
 # library
-if ( DEFINED STATICLIB_TOOLCHAIN )
-    configure_file ( ${CMAKE_CURRENT_LIST_DIR}/resources/Makefile-${STATICLIB_TOOLCHAIN}
-            ${CMAKE_CURRENT_BINARY_DIR}/Makefile-${STATICLIB_TOOLCHAIN})
-    add_custom_target ( ${PROJECT_NAME}
-            COMMAND ${CMAKE_MAKE_PROGRAM} -f ${CMAKE_CURRENT_BINARY_DIR}/Makefile-${STATICLIB_TOOLCHAIN})
-    add_library( crypto STATIC IMPORTED GLOBAL )
-    add_dependencies( crypto ${PROJECT_NAME} )
-    set_target_properties( crypto PROPERTIES IMPORTED_LOCATION
-            ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto${CMAKE_STATIC_LIBRARY_SUFFIX} )
-    add_library( ssl STATIC IMPORTED GLOBAL )
-    add_dependencies( ssl ${PROJECT_NAME} )
-    set_target_properties( ssl PROPERTIES IMPORTED_LOCATION
-            ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl${CMAKE_STATIC_LIBRARY_SUFFIX} )
+if ( NOT DEFINED CMAKE_LIBRARY_OUTPUT_DIRECTORY )
+    set ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} )
 endif ( )
+configure_file ( ${CMAKE_CURRENT_LIST_DIR}/resources/Makefile-${STATICLIB_TOOLCHAIN}
+        ${CMAKE_CURRENT_BINARY_DIR}/Makefile-${STATICLIB_TOOLCHAIN})
+add_custom_target ( ${PROJECT_NAME} ALL
+        COMMAND ${CMAKE_MAKE_PROGRAM} -f ${CMAKE_CURRENT_BINARY_DIR}/Makefile-${STATICLIB_TOOLCHAIN})
+add_library( crypto STATIC IMPORTED GLOBAL )
+add_dependencies( crypto ${PROJECT_NAME} )
+set_target_properties( crypto PROPERTIES IMPORTED_LOCATION
+        ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto${CMAKE_STATIC_LIBRARY_SUFFIX} )
+add_library( ssl STATIC IMPORTED GLOBAL )
+add_dependencies( ssl ${PROJECT_NAME} )
+set_target_properties( ssl PROPERTIES IMPORTED_LOCATION
+        ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl${CMAKE_STATIC_LIBRARY_SUFFIX} )
 
 # pkg-config
 if ( NOT DEFINED CMAKE_LIBRARY_OUTPUT_DIRECTORY )
