--- a/resources/Makefile-android_armeabi_gcc
+++ b/resources/Makefile-android_armeabi_gcc
@@ -22,21 +22,23 @@ export OBJDUMP := ${CMAKE_OBJDUMP}
 export RANLIB := ${CMAKE_RANLIB}
 export STRIP := ${CMAKE_STRIP}
 
-all:
-ifeq ($(wildcard ${CMAKE_CURRENT_BINARY_DIR}/openssl),)	
-	cp -a ${CMAKE_CURRENT_LIST_DIR}/openssl ${CMAKE_CURRENT_BINARY_DIR}/openssl
+configure:
 # http://wiki.openssl.org/index.php/Compilation_and_Installation#Modifying_Build_Settings	
-	perl -i -p -e 's#^"android","gcc:-mandroid .*? -O3#"android","gcc:${${PROJECT_NAME}_CFLAGS}#g' ${CMAKE_CURRENT_BINARY_DIR}/openssl/Configure
-	perl -i -p -e 's#^install: all install_docs install_sw#install: all install_sw#g' ${CMAKE_CURRENT_BINARY_DIR}/openssl/Makefile.org
-	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(SH) ./Configure \
-		android \
-		${${PROJECT_NAME}_SHARED} \
-		--openssldir=${CMAKE_CURRENT_BINARY_DIR}/openssl_install	
-	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(MAKE)
-	cd ${CMAKE_CURRENT_BINARY_DIR}/openssl && $(MAKE) install
+	perl -i -p -e 's#^"android","gcc:-mandroid .*? -O3#"android","gcc:${${PROJECT_NAME}_CFLAGS}#g' ./openssl/Configure
+	perl -i -p -e 's#^install: all install_docs install_sw#install: all install_sw#g' ./openssl/Makefile.org
+	cd openssl && $(SH) ./Configure \
+	    android \
+	    ${${PROJECT_NAME}_SHARED} \
+	    --openssldir=${CMAKE_CURRENT_BINARY_DIR}/openssl_install
+
+build:
+ifeq ($(wildcard ./openssl_flag),)		
+	cd openssl && $(MAKE)
+	cd openssl && $(MAKE) install
 	mkdir -p ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
-	cp ${CMAKE_CURRENT_BINARY_DIR}/openssl/libcrypto.a ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto.a
-	cp ${CMAKE_CURRENT_BINARY_DIR}/openssl/libssl.a ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl.a
+	cp ./openssl/libcrypto.a ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto.a
+	cp ./openssl/libssl.a ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl.a
+	touch ./openssl_flag
 else
-	@echo "[${CMAKE_CURRENT_BINARY_DIR}/openssl] directory found, skipping build"
-endif		
+	@echo "[${CMAKE_CURRENT_BINARY_DIR}/openssl_flag] found, skipping build"
+endif
