--- a/resources/Makefile-windows_i386_msvc
+++ b/resources/Makefile-windows_i386_msvc
@@ -12,14 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-all:
-	@if exist "${CMAKE_CURRENT_BINARY_DIR}/openssl" echo "flag" > "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag"
-	@if exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" echo "[${CMAKE_CURRENT_BINARY_DIR}/openssl] directory found, skipping build"
-	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" xcopy /s /i /q "${CMAKE_CURRENT_LIST_DIR}/openssl" "${CMAKE_CURRENT_BINARY_DIR}/openssl"
+
+
+
+configure:
 # http://rt.openssl.org/Ticket/Display.html?id=3650&user=guest&pass=guest
-	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" pushd "${CMAKE_CURRENT_BINARY_DIR}/openssl" & perl Configure VC-WIN32 no-asm & popd
-	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" pushd "${CMAKE_CURRENT_BINARY_DIR}/openssl" & ms\do_ms & popd
-	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" pushd "${CMAKE_CURRENT_BINARY_DIR}/openssl" & nmake /nologo -f ms\nt.mak & popd
-	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" echo f | xcopy /f /y "${CMAKE_CURRENT_BINARY_DIR}/openssl/out32/libeay32.lib" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto.lib"
-	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" echo f | xcopy /f /y "${CMAKE_CURRENT_BINARY_DIR}/openssl/out32/ssleay32.lib" "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl.lib"
-	@if not exist "${CMAKE_CURRENT_BINARY_DIR}/openssl_exists.flag" xcopy /s /i /q "${CMAKE_CURRENT_BINARY_DIR}/openssl/inc32" "${CMAKE_CURRENT_BINARY_DIR}/openssl/include"
+	pushd openssl & perl Configure VC-WIN32 no-asm & popd
+	pushd openssl & ms\do_ms & popd
+	
+build:	
+	@if exist openssl_flag echo "[${CMAKE_CURRENT_BINARY_DIR}/openssl_flag] found, skipping build"
+	@if not exist openssl_flag pushd openssl & nmake /nologo -f ms\nt.mak & popd
+	@if not exist openssl_flag echo f | xcopy /f /y openssl/out32/libeay32.lib "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcrypto.lib"
+	@if not exist openssl_flag echo f | xcopy /f /y openssl/out32/ssleay32.lib "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libssl.lib"
+	@if not exist openssl_flag xcopy /s /i /q openssl/inc32 openssl/include
+	@if not exist openssl_flag echo "flag" > openssl_flag
