--- a/resources/Makefile-linux_armcortexa7_gcc
+++ b/resources/Makefile-linux_armcortexa7_gcc
@@ -23,6 +23,13 @@ export RANLIB := ${CMAKE_RANLIB}
 export STRIP := ${CMAKE_STRIP}
 
 configure:
+	@echo -- Creating symlinks for OpenSSL headers
+	@mkdir openssl/include/openssl && cd openssl/include/openssl && \
+	    $(SH) ${CMAKE_CURRENT_LIST_DIR}/resources/preconfigured/create-symlinks.sh
+	
+build:
+ifeq ($(wildcard ./openssl_flag),)
+	rm -rf openssl/include/openssl
 # http://wiki.openssl.org/index.php/Compilation_and_Installation#Modifying_Build_Settings	
 	perl -i -p -e 's#^"linux-armv4",\s*"gcc:-DTERMIO -O3#"linux-armv4", "gcc:-DTERMIO ${${PROJECT_NAME}_CFLAGS}#g' ./openssl/Configure
 	perl -i -p -e 's#^install: all install_docs install_sw#install: all install_sw#g' ./openssl/Makefile.org	
@@ -30,9 +37,6 @@ configure:
 	    linux-armv4 \
 	    ${${PROJECT_NAME}_SHARED} \
 	    --openssldir=${CMAKE_CURRENT_BINARY_DIR}/openssl_install
-	
-build:
-ifeq ($(wildcard ./openssl_flag),)		
 	cd openssl && $(MAKE)
 	cd openssl && $(MAKE) install
 	mkdir -p ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
