windows build flags fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,17 +49,15 @@ else ( )
 endif ( )
 
 # variables for makefiles
-set ( ${PROJECT_NAME}_CFLAGS ${CMAKE_C_FLAGS} )
+if ( CMAKE_BUILD_TYPE MATCHES "Release" )
+    set ( ${PROJECT_NAME}_CFLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_RELEASE}" )
+else ( )
+    set ( ${PROJECT_NAME}_CFLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_DEBUG}" )
+endif ( )
 if ( ${CMAKE_CXX_COMPILER_ID} MATCHES "Clang" )
     set ( ${PROJECT_NAME}_CFLAGS "${${PROJECT_NAME}_CFLAGS} -Wno-empty-translation-unit -Wno-gnu-statement-expression -Wno-shadow" )
 elseif ( ${CMAKE_CXX_COMPILER_ID} MATCHES "GNU" )
     set ( ${PROJECT_NAME}_CFLAGS "${${PROJECT_NAME}_CFLAGS} -Wno-maybe-uninitialized" )
-endif ( )
-if ( CMAKE_BUILD_TYPE MATCHES "Debug" )
-    set ( ${PROJECT_NAME}_CFLAGS "${${PROJECT_NAME}_CFLAGS} ${CMAKE_C_FLAGS_DEBUG}" )
-endif ( )
-if ( CMAKE_BUILD_TYPE MATCHES "Release" )
-    set ( ${PROJECT_NAME}_CFLAGS "${${PROJECT_NAME}_CFLAGS} ${CMAKE_C_FLAGS_RELEASE}" )
 endif ( )
 if ( STATICLIB_OPENSSL_SHARED )
     set ( ${PROJECT_NAME}_SHARED "shared" )
